Some minor code-layout tweaks, and fixes for a couple of z-index issues relating to dragging visibility and click-to-move captures

--- a/site/css/game.css
+++ b/site/css/game.css
@@ -1,11 +1,13 @@
-#game {
+#game
+{
 	margin: 12px;
 	padding: 0px;
 	position: relative;
 	float: left;
 }
 
-#sidebar {
+#sidebar
+{
 	position: relative;
 	float: left;
 	width: 180px;
@@ -14,11 +16,11 @@
 .cell
 {
 	position: absolute;
-	z-index: 1;
+	z-index: -2;
 	background-size: 100%;
 }
 
-.cell.grid
+.cell.grid 
 {
 	border-left-style: solid;
 	border-top-style: solid;
@@ -37,7 +39,7 @@
 
 .cell.lines .line
 {
-	z-index: 2;
+	z-index: -1;
 	position: absolute;
 	width: 50%; height: 50%;
 	border-width: 1px;
@@ -89,11 +91,15 @@
 	text-align:center;
 }
 
-
-.piece {
+.move
+{
 	z-index: 5;
-	width: 100%;
-	height: 100%;
+	position: relative;
+}
+
+.piece
+{
+	z-index: 0;
 	position: absolute;
 	background-position: center; 
 	background-size: 90%;
@@ -101,7 +107,8 @@
 	cursor:move;
 }
 
-.move.destination {
+.move.destination
+{
 	position: absolute;
 	background-position: center; 
 	background-size: 50%;
@@ -111,7 +118,8 @@
 	opacity: 0.6;
 }
 
-.piece.selected {
+.piece.selected
+{
 	background-color: #99ccff;
 }
 
